// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CheckboxField should render correctly 1`] = `
<DocumentFragment>
  .cache-1sz1qdq {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
}

.cache-1sz1qdq[aria-disabled='false'],
.cache-1sz1qdq[aria-disabled='false']>label {
  cursor: pointer;
}

.cache-1sz1qdq[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.cache-1sz1qdq[aria-disabled='true']>label {
  cursor: not-allowed;
}

.cache-1sz1qdq[aria-disabled='true'] .eqr7bqq3 {
  fill: #d9dadd;
}

.cache-1sz1qdq[aria-disabled='true'] .eqr7bqq3 .eqr7bqq7 {
  stroke: #d9dadd;
  fill: #f3f3f4;
}

.cache-1sz1qdq .eqr7bqq6,
.cache-1sz1qdq .eqr7bqq5 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-1sz1qdq .eqr7bqq2:checked+.eqr7bqq3 .eqr7bqq6 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-1sz1qdq .eqr7bqq2[aria-checked="mixed"]+.eqr7bqq3 .eqr7bqq5 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-1sz1qdq:hover[aria-disabled='false'] .eqr7bqq2+.eqr7bqq3 {
  background-color: #f1eefc;
  fill: #521094;
}

.cache-1sz1qdq:hover[aria-disabled='false'] .eqr7bqq2+.eqr7bqq3 .eqr7bqq7 {
  stroke: #521094;
  fill: #f1eefc;
}

.cache-1sz1qdq:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid="true"]+.eqr7bqq3 {
  background-color: #ffebf2;
  fill: #e51963;
}

.cache-1sz1qdq:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid="true"]+.eqr7bqq3 .eqr7bqq7 {
  stroke: #e51963;
  fill: #ffebf2;
}

.cache-59o5to {
  position: absolute;
  white-space: nowrap;
  height: 24px;
  width: 24px;
  opacity: 0;
  border-width: 0;
}

.cache-59o5to:not(:disabled) {
  cursor: pointer;
}

.cache-59o5to:disabled {
  cursor: not-allowed;
}

.cache-59o5to:not(:disabled):checked+.eqr7bqq3,
.cache-59o5to:not(:disabled)[aria-checked='mixed']+.eqr7bqq3 {
  fill: #521094;
}

.cache-59o5to:not(:disabled):checked+.eqr7bqq3 .eqr7bqq7,
.cache-59o5to:not(:disabled)[aria-checked='mixed']+.eqr7bqq3 .eqr7bqq7 {
  stroke: #521094;
}

.cache-59o5to:not(:disabled)[aria-invalid='true']+.eqr7bqq3,
.cache-59o5to:not(:disabled)[aria-invalid='mixed']+.eqr7bqq3 {
  fill: #e51963;
}

.cache-59o5to:not(:disabled)[aria-invalid='true']+.eqr7bqq3 .eqr7bqq7,
.cache-59o5to:not(:disabled)[aria-invalid='mixed']+.eqr7bqq3 .eqr7bqq7 {
  stroke: #e51963;
}

.cache-59o5to:focus+.eqr7bqq3 {
  background-color: #f1eefc;
  fill: #521094;
}

.cache-59o5to:focus+.eqr7bqq3 .eqr7bqq7 {
  stroke: #521094;
  fill: #f1eefc;
}

.cache-59o5to[aria-invalid='true']:focus+.eqr7bqq3 {
  background-color: #ffebf2;
  fill: #e51963;
}

.cache-59o5to[aria-invalid='true']:focus+.eqr7bqq3 .eqr7bqq7 {
  stroke: #e51963;
  fill: #ffebf2;
}

.cache-ttqha5 {
  border-radius: 4px;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.cache-w3iio4 {
  fill: #f9f9fa;
  stroke: #b5b7bd;
}

<form
    novalidate=""
  >
    <div
      aria-disabled="false"
      class="cache-1sz1qdq eqr7bqq1"
      data-checked="false"
      data-error="false"
    >
      <input
        aria-invalid="false"
        class="cache-59o5to eqr7bqq2"
        id="test"
        name="test"
        type="checkbox"
        value=""
      />
      <svg
        class="cache-ttqha5 eqr7bqq3"
        size="24"
        viewBox="0 0 24 24"
      >
        <g>
          <rect
            class="cache-w3iio4 eqr7bqq7"
            height="14"
            rx="2px"
            stroke-width="2"
            width="14"
            x="5"
            y="5"
          />
          <rect
            class="cache-0 eqr7bqq5"
            height="2"
            rx="1"
            width="8"
            x="8"
            y="11"
          />
          <rect
            class="cache-0 eqr7bqq6"
            height="8"
            rx="1"
            width="8"
            x="8"
            y="8"
          />
        </g>
      </svg>
    </div>
  </form>
</DocumentFragment>
`;

exports[`CheckboxField should render correctly checked without value 1`] = `
<DocumentFragment>
  .cache-1sz1qdq {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
}

.cache-1sz1qdq[aria-disabled='false'],
.cache-1sz1qdq[aria-disabled='false']>label {
  cursor: pointer;
}

.cache-1sz1qdq[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.cache-1sz1qdq[aria-disabled='true']>label {
  cursor: not-allowed;
}

.cache-1sz1qdq[aria-disabled='true'] .eqr7bqq3 {
  fill: #d9dadd;
}

.cache-1sz1qdq[aria-disabled='true'] .eqr7bqq3 .eqr7bqq7 {
  stroke: #d9dadd;
  fill: #f3f3f4;
}

.cache-1sz1qdq .eqr7bqq6,
.cache-1sz1qdq .eqr7bqq5 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-1sz1qdq .eqr7bqq2:checked+.eqr7bqq3 .eqr7bqq6 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-1sz1qdq .eqr7bqq2[aria-checked="mixed"]+.eqr7bqq3 .eqr7bqq5 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-1sz1qdq:hover[aria-disabled='false'] .eqr7bqq2+.eqr7bqq3 {
  background-color: #f1eefc;
  fill: #521094;
}

.cache-1sz1qdq:hover[aria-disabled='false'] .eqr7bqq2+.eqr7bqq3 .eqr7bqq7 {
  stroke: #521094;
  fill: #f1eefc;
}

.cache-1sz1qdq:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid="true"]+.eqr7bqq3 {
  background-color: #ffebf2;
  fill: #e51963;
}

.cache-1sz1qdq:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid="true"]+.eqr7bqq3 .eqr7bqq7 {
  stroke: #e51963;
  fill: #ffebf2;
}

.cache-59o5to {
  position: absolute;
  white-space: nowrap;
  height: 24px;
  width: 24px;
  opacity: 0;
  border-width: 0;
}

.cache-59o5to:not(:disabled) {
  cursor: pointer;
}

.cache-59o5to:disabled {
  cursor: not-allowed;
}

.cache-59o5to:not(:disabled):checked+.eqr7bqq3,
.cache-59o5to:not(:disabled)[aria-checked='mixed']+.eqr7bqq3 {
  fill: #521094;
}

.cache-59o5to:not(:disabled):checked+.eqr7bqq3 .eqr7bqq7,
.cache-59o5to:not(:disabled)[aria-checked='mixed']+.eqr7bqq3 .eqr7bqq7 {
  stroke: #521094;
}

.cache-59o5to:not(:disabled)[aria-invalid='true']+.eqr7bqq3,
.cache-59o5to:not(:disabled)[aria-invalid='mixed']+.eqr7bqq3 {
  fill: #e51963;
}

.cache-59o5to:not(:disabled)[aria-invalid='true']+.eqr7bqq3 .eqr7bqq7,
.cache-59o5to:not(:disabled)[aria-invalid='mixed']+.eqr7bqq3 .eqr7bqq7 {
  stroke: #e51963;
}

.cache-59o5to:focus+.eqr7bqq3 {
  background-color: #f1eefc;
  fill: #521094;
}

.cache-59o5to:focus+.eqr7bqq3 .eqr7bqq7 {
  stroke: #521094;
  fill: #f1eefc;
}

.cache-59o5to[aria-invalid='true']:focus+.eqr7bqq3 {
  background-color: #ffebf2;
  fill: #e51963;
}

.cache-59o5to[aria-invalid='true']:focus+.eqr7bqq3 .eqr7bqq7 {
  stroke: #e51963;
  fill: #ffebf2;
}

.cache-ttqha5 {
  border-radius: 4px;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.cache-w3iio4 {
  fill: #f9f9fa;
  stroke: #b5b7bd;
}

<form
    novalidate=""
  >
    <div
      aria-disabled="false"
      class="cache-1sz1qdq eqr7bqq1"
      data-checked="true"
      data-error="false"
    >
      <input
        aria-invalid="false"
        checked=""
        class="cache-59o5to eqr7bqq2"
        id="checked"
        name="checked"
        type="checkbox"
        value=""
      />
      <svg
        class="cache-ttqha5 eqr7bqq3"
        size="24"
        viewBox="0 0 24 24"
      >
        <g>
          <rect
            class="cache-w3iio4 eqr7bqq7"
            height="14"
            rx="2px"
            stroke-width="2"
            width="14"
            x="5"
            y="5"
          />
          <rect
            class="cache-0 eqr7bqq5"
            height="2"
            rx="1"
            width="8"
            x="8"
            y="11"
          />
          <rect
            class="cache-0 eqr7bqq6"
            height="8"
            rx="1"
            width="8"
            x="8"
            y="8"
          />
        </g>
      </svg>
    </div>
  </form>
</DocumentFragment>
`;

exports[`CheckboxField should render correctly disabled 1`] = `
<DocumentFragment>
  .cache-1sz1qdq {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
}

.cache-1sz1qdq[aria-disabled='false'],
.cache-1sz1qdq[aria-disabled='false']>label {
  cursor: pointer;
}

.cache-1sz1qdq[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.cache-1sz1qdq[aria-disabled='true']>label {
  cursor: not-allowed;
}

.cache-1sz1qdq[aria-disabled='true'] .eqr7bqq3 {
  fill: #d9dadd;
}

.cache-1sz1qdq[aria-disabled='true'] .eqr7bqq3 .eqr7bqq7 {
  stroke: #d9dadd;
  fill: #f3f3f4;
}

.cache-1sz1qdq .eqr7bqq6,
.cache-1sz1qdq .eqr7bqq5 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-1sz1qdq .eqr7bqq2:checked+.eqr7bqq3 .eqr7bqq6 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-1sz1qdq .eqr7bqq2[aria-checked="mixed"]+.eqr7bqq3 .eqr7bqq5 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-1sz1qdq:hover[aria-disabled='false'] .eqr7bqq2+.eqr7bqq3 {
  background-color: #f1eefc;
  fill: #521094;
}

.cache-1sz1qdq:hover[aria-disabled='false'] .eqr7bqq2+.eqr7bqq3 .eqr7bqq7 {
  stroke: #521094;
  fill: #f1eefc;
}

.cache-1sz1qdq:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid="true"]+.eqr7bqq3 {
  background-color: #ffebf2;
  fill: #e51963;
}

.cache-1sz1qdq:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid="true"]+.eqr7bqq3 .eqr7bqq7 {
  stroke: #e51963;
  fill: #ffebf2;
}

.cache-59o5to {
  position: absolute;
  white-space: nowrap;
  height: 24px;
  width: 24px;
  opacity: 0;
  border-width: 0;
}

.cache-59o5to:not(:disabled) {
  cursor: pointer;
}

.cache-59o5to:disabled {
  cursor: not-allowed;
}

.cache-59o5to:not(:disabled):checked+.eqr7bqq3,
.cache-59o5to:not(:disabled)[aria-checked='mixed']+.eqr7bqq3 {
  fill: #521094;
}

.cache-59o5to:not(:disabled):checked+.eqr7bqq3 .eqr7bqq7,
.cache-59o5to:not(:disabled)[aria-checked='mixed']+.eqr7bqq3 .eqr7bqq7 {
  stroke: #521094;
}

.cache-59o5to:not(:disabled)[aria-invalid='true']+.eqr7bqq3,
.cache-59o5to:not(:disabled)[aria-invalid='mixed']+.eqr7bqq3 {
  fill: #e51963;
}

.cache-59o5to:not(:disabled)[aria-invalid='true']+.eqr7bqq3 .eqr7bqq7,
.cache-59o5to:not(:disabled)[aria-invalid='mixed']+.eqr7bqq3 .eqr7bqq7 {
  stroke: #e51963;
}

.cache-59o5to:focus+.eqr7bqq3 {
  background-color: #f1eefc;
  fill: #521094;
}

.cache-59o5to:focus+.eqr7bqq3 .eqr7bqq7 {
  stroke: #521094;
  fill: #f1eefc;
}

.cache-59o5to[aria-invalid='true']:focus+.eqr7bqq3 {
  background-color: #ffebf2;
  fill: #e51963;
}

.cache-59o5to[aria-invalid='true']:focus+.eqr7bqq3 .eqr7bqq7 {
  stroke: #e51963;
  fill: #ffebf2;
}

.cache-ttqha5 {
  border-radius: 4px;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.cache-w3iio4 {
  fill: #f9f9fa;
  stroke: #b5b7bd;
}

<form
    novalidate=""
  >
    <div
      aria-disabled="true"
      class="cache-1sz1qdq eqr7bqq1"
      data-checked="false"
      data-error="false"
    >
      <input
        aria-invalid="false"
        class="cache-59o5to eqr7bqq2"
        disabled=""
        id="test"
        name="test"
        type="checkbox"
        value=""
      />
      <svg
        class="cache-ttqha5 eqr7bqq3"
        size="24"
        viewBox="0 0 24 24"
      >
        <g>
          <rect
            class="cache-w3iio4 eqr7bqq7"
            height="14"
            rx="2px"
            stroke-width="2"
            width="14"
            x="5"
            y="5"
          />
          <rect
            class="cache-0 eqr7bqq5"
            height="2"
            rx="1"
            width="8"
            x="8"
            y="11"
          />
          <rect
            class="cache-0 eqr7bqq6"
            height="8"
            rx="1"
            width="8"
            x="8"
            y="8"
          />
        </g>
      </svg>
    </div>
  </form>
</DocumentFragment>
`;

exports[`CheckboxField should render correctly with a value 1`] = `
<DocumentFragment>
  .cache-1sz1qdq {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
}

.cache-1sz1qdq[aria-disabled='false'],
.cache-1sz1qdq[aria-disabled='false']>label {
  cursor: pointer;
}

.cache-1sz1qdq[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.cache-1sz1qdq[aria-disabled='true']>label {
  cursor: not-allowed;
}

.cache-1sz1qdq[aria-disabled='true'] .eqr7bqq3 {
  fill: #d9dadd;
}

.cache-1sz1qdq[aria-disabled='true'] .eqr7bqq3 .eqr7bqq7 {
  stroke: #d9dadd;
  fill: #f3f3f4;
}

.cache-1sz1qdq .eqr7bqq6,
.cache-1sz1qdq .eqr7bqq5 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-1sz1qdq .eqr7bqq2:checked+.eqr7bqq3 .eqr7bqq6 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-1sz1qdq .eqr7bqq2[aria-checked="mixed"]+.eqr7bqq3 .eqr7bqq5 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-1sz1qdq:hover[aria-disabled='false'] .eqr7bqq2+.eqr7bqq3 {
  background-color: #f1eefc;
  fill: #521094;
}

.cache-1sz1qdq:hover[aria-disabled='false'] .eqr7bqq2+.eqr7bqq3 .eqr7bqq7 {
  stroke: #521094;
  fill: #f1eefc;
}

.cache-1sz1qdq:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid="true"]+.eqr7bqq3 {
  background-color: #ffebf2;
  fill: #e51963;
}

.cache-1sz1qdq:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid="true"]+.eqr7bqq3 .eqr7bqq7 {
  stroke: #e51963;
  fill: #ffebf2;
}

.cache-59o5to {
  position: absolute;
  white-space: nowrap;
  height: 24px;
  width: 24px;
  opacity: 0;
  border-width: 0;
}

.cache-59o5to:not(:disabled) {
  cursor: pointer;
}

.cache-59o5to:disabled {
  cursor: not-allowed;
}

.cache-59o5to:not(:disabled):checked+.eqr7bqq3,
.cache-59o5to:not(:disabled)[aria-checked='mixed']+.eqr7bqq3 {
  fill: #521094;
}

.cache-59o5to:not(:disabled):checked+.eqr7bqq3 .eqr7bqq7,
.cache-59o5to:not(:disabled)[aria-checked='mixed']+.eqr7bqq3 .eqr7bqq7 {
  stroke: #521094;
}

.cache-59o5to:not(:disabled)[aria-invalid='true']+.eqr7bqq3,
.cache-59o5to:not(:disabled)[aria-invalid='mixed']+.eqr7bqq3 {
  fill: #e51963;
}

.cache-59o5to:not(:disabled)[aria-invalid='true']+.eqr7bqq3 .eqr7bqq7,
.cache-59o5to:not(:disabled)[aria-invalid='mixed']+.eqr7bqq3 .eqr7bqq7 {
  stroke: #e51963;
}

.cache-59o5to:focus+.eqr7bqq3 {
  background-color: #f1eefc;
  fill: #521094;
}

.cache-59o5to:focus+.eqr7bqq3 .eqr7bqq7 {
  stroke: #521094;
  fill: #f1eefc;
}

.cache-59o5to[aria-invalid='true']:focus+.eqr7bqq3 {
  background-color: #ffebf2;
  fill: #e51963;
}

.cache-59o5to[aria-invalid='true']:focus+.eqr7bqq3 .eqr7bqq7 {
  stroke: #e51963;
  fill: #ffebf2;
}

.cache-ttqha5 {
  border-radius: 4px;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.cache-w3iio4 {
  fill: #f9f9fa;
  stroke: #b5b7bd;
}

<form
    novalidate=""
  >
    <div
      aria-disabled="false"
      class="cache-1sz1qdq eqr7bqq1"
      data-checked="false"
      data-error="false"
    >
      <input
        aria-invalid="false"
        class="cache-59o5to eqr7bqq2"
        id="value"
        name="value"
        type="checkbox"
        value="foo"
      />
      <svg
        class="cache-ttqha5 eqr7bqq3"
        size="24"
        viewBox="0 0 24 24"
      >
        <g>
          <rect
            class="cache-w3iio4 eqr7bqq7"
            height="14"
            rx="2px"
            stroke-width="2"
            width="14"
            x="5"
            y="5"
          />
          <rect
            class="cache-0 eqr7bqq5"
            height="2"
            rx="1"
            width="8"
            x="8"
            y="11"
          />
          <rect
            class="cache-0 eqr7bqq6"
            height="8"
            rx="1"
            width="8"
            x="8"
            y="8"
          />
        </g>
      </svg>
    </div>
    <div
      aria-disabled="false"
      class="cache-1sz1qdq eqr7bqq1"
      data-checked="true"
      data-error="false"
    >
      <input
        aria-invalid="false"
        checked=""
        class="cache-59o5to eqr7bqq2"
        id="value"
        name="value"
        type="checkbox"
        value="bar"
      />
      <svg
        class="cache-ttqha5 eqr7bqq3"
        size="24"
        viewBox="0 0 24 24"
      >
        <g>
          <rect
            class="cache-w3iio4 eqr7bqq7"
            height="14"
            rx="2px"
            stroke-width="2"
            width="14"
            x="5"
            y="5"
          />
          <rect
            class="cache-0 eqr7bqq5"
            height="2"
            rx="1"
            width="8"
            x="8"
            y="11"
          />
          <rect
            class="cache-0 eqr7bqq6"
            height="8"
            rx="1"
            width="8"
            x="8"
            y="8"
          />
        </g>
      </svg>
    </div>
  </form>
</DocumentFragment>
`;

exports[`CheckboxField should render correctly with errors 1`] = `
<DocumentFragment>
  .cache-1sz1qdq {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
}

.cache-1sz1qdq[aria-disabled='false'],
.cache-1sz1qdq[aria-disabled='false']>label {
  cursor: pointer;
}

.cache-1sz1qdq[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.cache-1sz1qdq[aria-disabled='true']>label {
  cursor: not-allowed;
}

.cache-1sz1qdq[aria-disabled='true'] .eqr7bqq3 {
  fill: #d9dadd;
}

.cache-1sz1qdq[aria-disabled='true'] .eqr7bqq3 .eqr7bqq7 {
  stroke: #d9dadd;
  fill: #f3f3f4;
}

.cache-1sz1qdq .eqr7bqq6,
.cache-1sz1qdq .eqr7bqq5 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-1sz1qdq .eqr7bqq2:checked+.eqr7bqq3 .eqr7bqq6 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-1sz1qdq .eqr7bqq2[aria-checked="mixed"]+.eqr7bqq3 .eqr7bqq5 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-1sz1qdq:hover[aria-disabled='false'] .eqr7bqq2+.eqr7bqq3 {
  background-color: #f1eefc;
  fill: #521094;
}

.cache-1sz1qdq:hover[aria-disabled='false'] .eqr7bqq2+.eqr7bqq3 .eqr7bqq7 {
  stroke: #521094;
  fill: #f1eefc;
}

.cache-1sz1qdq:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid="true"]+.eqr7bqq3 {
  background-color: #ffebf2;
  fill: #e51963;
}

.cache-1sz1qdq:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid="true"]+.eqr7bqq3 .eqr7bqq7 {
  stroke: #e51963;
  fill: #ffebf2;
}

.cache-59o5to {
  position: absolute;
  white-space: nowrap;
  height: 24px;
  width: 24px;
  opacity: 0;
  border-width: 0;
}

.cache-59o5to:not(:disabled) {
  cursor: pointer;
}

.cache-59o5to:disabled {
  cursor: not-allowed;
}

.cache-59o5to:not(:disabled):checked+.eqr7bqq3,
.cache-59o5to:not(:disabled)[aria-checked='mixed']+.eqr7bqq3 {
  fill: #521094;
}

.cache-59o5to:not(:disabled):checked+.eqr7bqq3 .eqr7bqq7,
.cache-59o5to:not(:disabled)[aria-checked='mixed']+.eqr7bqq3 .eqr7bqq7 {
  stroke: #521094;
}

.cache-59o5to:not(:disabled)[aria-invalid='true']+.eqr7bqq3,
.cache-59o5to:not(:disabled)[aria-invalid='mixed']+.eqr7bqq3 {
  fill: #e51963;
}

.cache-59o5to:not(:disabled)[aria-invalid='true']+.eqr7bqq3 .eqr7bqq7,
.cache-59o5to:not(:disabled)[aria-invalid='mixed']+.eqr7bqq3 .eqr7bqq7 {
  stroke: #e51963;
}

.cache-59o5to:focus+.eqr7bqq3 {
  background-color: #f1eefc;
  fill: #521094;
}

.cache-59o5to:focus+.eqr7bqq3 .eqr7bqq7 {
  stroke: #521094;
  fill: #f1eefc;
}

.cache-59o5to[aria-invalid='true']:focus+.eqr7bqq3 {
  background-color: #ffebf2;
  fill: #e51963;
}

.cache-59o5to[aria-invalid='true']:focus+.eqr7bqq3 .eqr7bqq7 {
  stroke: #e51963;
  fill: #ffebf2;
}

.cache-ttqha5 {
  border-radius: 4px;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.cache-w3iio4 {
  fill: #f9f9fa;
  stroke: #b5b7bd;
}

.cache-8ikytl-sizeStyles {
  vertical-align: middle;
  fill: #b3144d;
  height: 10px;
  width: 10px;
  min-width: 10px;
  min-height: 10px;
}

.cache-bod6yc {
  color: #b3144d;
  font-size: 14px;
  font-family: Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 20px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align:start padding: 0 4px;
}

<form
    novalidate=""
  >
    <div
      aria-disabled="false"
      class="cache-1sz1qdq eqr7bqq1"
      data-checked="false"
      data-error="true"
    >
      <input
        aria-describedby="test-hint"
        aria-invalid="true"
        class="cache-59o5to eqr7bqq2"
        id="test"
        name="test"
        required=""
        type="checkbox"
        value=""
      />
      <svg
        class="cache-ttqha5 eqr7bqq3"
        size="24"
        viewBox="0 0 24 24"
      >
        <g>
          <rect
            class="cache-w3iio4 eqr7bqq7"
            height="14"
            rx="2px"
            stroke-width="2"
            width="14"
            x="5"
            y="5"
          />
          <rect
            class="cache-0 eqr7bqq5"
            height="2"
            rx="1"
            width="8"
            x="8"
            y="11"
          />
          <rect
            class="cache-0 eqr7bqq6"
            height="8"
            rx="1"
            width="8"
            x="8"
            y="8"
          />
        </g>
      </svg>
      <label
        for="test"
      >
        Checkbox field error
      </label>
      <sup>
        <svg
          class="cache-8ikytl-sizeStyles e5nqbfp0"
          viewBox="0 0 24 24"
        >
          <path
            d="M10,2H14L13.21,9.91L19.66,5.27L21.66,8.73L14.42,12L21.66,15.27L19.66,18.73L13.21,14.09L14,22H10L10.79,14.09L4.34,18.73L2.34,15.27L9.58,12L2.34,8.73L4.34,5.27L10.79,9.91L10,2Z"
          />
        </svg>
      </sup>
    </div>
    <p
      class="eqr7bqq4 cache-bod6yc e13y3mga0"
    >
      This field is required
    </p>
    <div>
      Focus
    </div>
  </form>
</DocumentFragment>
`;

exports[`CheckboxField should trigger events correctly 1`] = `
<DocumentFragment>
  .cache-1sz1qdq {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
}

.cache-1sz1qdq[aria-disabled='false'],
.cache-1sz1qdq[aria-disabled='false']>label {
  cursor: pointer;
}

.cache-1sz1qdq[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.cache-1sz1qdq[aria-disabled='true']>label {
  cursor: not-allowed;
}

.cache-1sz1qdq[aria-disabled='true'] .eqr7bqq3 {
  fill: #d9dadd;
}

.cache-1sz1qdq[aria-disabled='true'] .eqr7bqq3 .eqr7bqq7 {
  stroke: #d9dadd;
  fill: #f3f3f4;
}

.cache-1sz1qdq .eqr7bqq6,
.cache-1sz1qdq .eqr7bqq5 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-1sz1qdq .eqr7bqq2:checked+.eqr7bqq3 .eqr7bqq6 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-1sz1qdq .eqr7bqq2[aria-checked="mixed"]+.eqr7bqq3 .eqr7bqq5 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-1sz1qdq:hover[aria-disabled='false'] .eqr7bqq2+.eqr7bqq3 {
  background-color: #f1eefc;
  fill: #521094;
}

.cache-1sz1qdq:hover[aria-disabled='false'] .eqr7bqq2+.eqr7bqq3 .eqr7bqq7 {
  stroke: #521094;
  fill: #f1eefc;
}

.cache-1sz1qdq:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid="true"]+.eqr7bqq3 {
  background-color: #ffebf2;
  fill: #e51963;
}

.cache-1sz1qdq:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid="true"]+.eqr7bqq3 .eqr7bqq7 {
  stroke: #e51963;
  fill: #ffebf2;
}

.cache-59o5to {
  position: absolute;
  white-space: nowrap;
  height: 24px;
  width: 24px;
  opacity: 0;
  border-width: 0;
}

.cache-59o5to:not(:disabled) {
  cursor: pointer;
}

.cache-59o5to:disabled {
  cursor: not-allowed;
}

.cache-59o5to:not(:disabled):checked+.eqr7bqq3,
.cache-59o5to:not(:disabled)[aria-checked='mixed']+.eqr7bqq3 {
  fill: #521094;
}

.cache-59o5to:not(:disabled):checked+.eqr7bqq3 .eqr7bqq7,
.cache-59o5to:not(:disabled)[aria-checked='mixed']+.eqr7bqq3 .eqr7bqq7 {
  stroke: #521094;
}

.cache-59o5to:not(:disabled)[aria-invalid='true']+.eqr7bqq3,
.cache-59o5to:not(:disabled)[aria-invalid='mixed']+.eqr7bqq3 {
  fill: #e51963;
}

.cache-59o5to:not(:disabled)[aria-invalid='true']+.eqr7bqq3 .eqr7bqq7,
.cache-59o5to:not(:disabled)[aria-invalid='mixed']+.eqr7bqq3 .eqr7bqq7 {
  stroke: #e51963;
}

.cache-59o5to:focus+.eqr7bqq3 {
  background-color: #f1eefc;
  fill: #521094;
}

.cache-59o5to:focus+.eqr7bqq3 .eqr7bqq7 {
  stroke: #521094;
  fill: #f1eefc;
}

.cache-59o5to[aria-invalid='true']:focus+.eqr7bqq3 {
  background-color: #ffebf2;
  fill: #e51963;
}

.cache-59o5to[aria-invalid='true']:focus+.eqr7bqq3 .eqr7bqq7 {
  stroke: #e51963;
  fill: #ffebf2;
}

.cache-ttqha5 {
  border-radius: 4px;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.cache-w3iio4 {
  fill: #f9f9fa;
  stroke: #b5b7bd;
}

<form
    novalidate=""
  >
    <div
      aria-disabled="false"
      class="cache-1sz1qdq eqr7bqq1"
      data-checked="true"
      data-error="false"
    >
      <input
        aria-invalid="false"
        class="cache-59o5to eqr7bqq2"
        id="test"
        name="test"
        type="checkbox"
        value=""
      />
      <svg
        class="cache-ttqha5 eqr7bqq3"
        size="24"
        viewBox="0 0 24 24"
      >
        <g>
          <rect
            class="cache-w3iio4 eqr7bqq7"
            height="14"
            rx="2px"
            stroke-width="2"
            width="14"
            x="5"
            y="5"
          />
          <rect
            class="cache-0 eqr7bqq5"
            height="2"
            rx="1"
            width="8"
            x="8"
            y="11"
          />
          <rect
            class="cache-0 eqr7bqq6"
            height="8"
            rx="1"
            width="8"
            x="8"
            y="8"
          />
        </g>
      </svg>
      <label
        for="test"
      >
        Checkbox field events
      </label>
    </div>
  </form>
</DocumentFragment>
`;
